--- a/SQLDatabaseProject/Html/Style.Css
+++ b/SQLDatabaseProject/Html/Style.Css
@@ -1,19 +1,6 @@
-body {
-    background-color: darkkhaki;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-/*button {
-    padding: 20px;
-    color: blueviolet;
-    background-color: black;
-    text-align: center;
-    font-size: 34px;
-    border-radius: 5px;
-    align-content: center;
-}*/
-
-.banaani {
-    font-size: 25px;
+img {
+    width: 100px;
+    border-radius: 10px;
+    float: left;
+    margin-right: 100px;
 }
