--- a/SQLDatabaseProject/Html/Style.Css
+++ b/SQLDatabaseProject/Html/Style.Css
@@ -1,6 +1,27 @@
 img {
     width: 100px;
     border-radius: 10px;
-    float: left;
+    object-fit: cover;
     margin-right: 100px;
+}
+input[type="text"] {
+
+    border: 2px solid #000000;
+    border-radius: 6px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+input[type="password"] {
+    border: 2px solid #000000;
+    border-radius: 6px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+.i {
+    color: red;
+    font-style: normal;
+    font-weight: bold;
 }
