--- a/SQLDatabaseProject/Html/Style.Css
+++ b/SQLDatabaseProject/Html/Style.Css
@@ -20,8 +20,11 @@ input[type="password"] {
     width: 100%;
     box-sizing: border-box;
 }
-.i {
-    color: red;
-    font-style: normal;
-    font-weight: bold;
+button {
+    background-color: #000000;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+    padding: 12px 15px;
+    cursor: pointer;
 }
