--- a/SQLDatabaseProject/Html/dashboard.css
+++ b/SQLDatabaseProject/Html/dashboard.css
@@ -13,10 +13,14 @@
 
 
 .header {
+    top: 0;
     width: 100%;
-    background-color: rgb(17, 16, 16);
     height: 80px;
     display: block;
+    position: fixed;
+    z-index: 1000;   
+
+    background-color: rgb(17, 16, 16);
     border-bottom: 2px solid rgb(43, 43, 43);
 }
 
@@ -26,7 +30,6 @@
     width: 95%;
     margin: 0 auto;
     display: block;
-
 }
 
 .logo-container {
@@ -43,6 +46,7 @@
     font-size: 30px;
     -webkit-text-stroke: 1px white;
     font-weight: 200;
+    user-select: none;
 }
 .logo-container h1 span{
     margin: 0 5px;
@@ -52,28 +56,30 @@
     background-clip: text;
     font-weight: 400;
 }
+.logo-container:hover {
+    /*cursor: pointer;*/
+}
 
-.user-container{
+.username-container{
     display: flex;
     float: right;
     height: 100%;
     align-items: center;
-
 }
-.user-container h2 {
+.username-container h2 {
     color: white;
-    vertical-align:middle;
+    display: flex;
     font-family: "Caprasimo";
     font-weight:lighter;
-    font-size: 20px;
+    font-size: 22px;
     transition: 0.3s;
-    display: inline-block;
 
 }
-.user-container h2:hover {
+.username-container h2:hover {
     transition: 0.1s;
     text-decoration: underline;
-    font-size: 21px;
+    color: aliceblue;
+    scale: 1.04;
     cursor: pointer;
 }
 
@@ -82,35 +88,103 @@
 
 
 body {
-    background-color: rgb(15, 11, 29);
+    padding-top: 80px;
+    background-color: rgb(26, 18, 25);
 }
 
 
 
 
 .left-sidebar-container {
-    background-color: rgb(26, 25, 25);
-    display: block;
-    float: left;
     height: 100vh;
-    width: 225px;
-    border-right: 3px solid rgb(255, 255, 255);
+    width: 325px;
+    display: block;
+    left: 0;
+    top: 80;
+    position: fixed;
+
+    background-color: rgb(26, 25, 25);
+    border-right: 3px solid rgb(2, 2, 2);
     padding-top: 5px;
 }
 .tabs{
     background-color: black;
     border-radius: 4px;
-    border: 2px solid white;
+    border: 2px solid rgb(104, 97, 97);
     color: white;
     margin: 5px 7px 5px 7px;
     padding: 8px;
+    
     font-weight: bold;
     font-size: 20px;
     transition: 0.2s;
+
+    line-height: 40px;
+    height: 40px;
+
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    user-select: none;
 }
 .tabs:hover {
     background-color: rgb(194, 194, 194);
-    font-size: 22px;
+    font-size: 30px;
     transition: 0.2s;
-    color: black ;
+    color: rgb(0, 0, 0) ;
+    scale: 1.01;
+    cursor: pointer;
+}
+
+.tab-users {
+    width:calc(100% - 325px);
+    height: fit-content;
+
+    margin-left: 325px;
+    padding: 15px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+
+    background-color: rgba(182, 47, 47, 0.233);
+}
+
+.users-container-box {
+    display: block;
+    width: 250px;
+    height: 100px;
+    background-color: beige;
+    border-radius: 5px;
+    border: 3px black solid;
+
+
+    margin: 15px;
+    padding: 10px;
+
+    z-index: 10000;
+}
+
+
+.tab-accounts {
+    background-color: rgb(47, 83, 100);
+    width:100%;
+    height: 100vh;
+    z-index: 10000000;
+}
+.tab-games {
+    background-color: rgb(87, 32, 138);
+    width:100%;
+    height: 100vh;
+    z-index: 10000000;
+}
+
+
+
+
+.user-container {
+    display: block;
+    width: 250px;
+    height: 100px;
+    background-color: rgb(221, 221, 54);
 }
