--- a/SQLDatabaseProject/Html/dashboard.css
+++ b/SQLDatabaseProject/Html/dashboard.css
@@ -136,22 +136,61 @@ body {
 }
 
 .tab-users {
-    width:calc(100% - 325px);
+    width: auto;
     height: fit-content;
 
-    margin-left: 325px;
-    padding: 15px;
+    margin-top: 3px;
+    margin-left: 328px;
 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     box-sizing: border-box;
 
+    user-select: none;
+
     background-color: rgba(182, 47, 47, 0.233);
 }
 
-.users-container-box {
+.new-user-creation-container {
+    width: 100%;
+    height: 30px;
+
+    background-color: rgb(83, 82, 79);
+    z-index: 1000000;
+
+    padding-left: 2px;
+    display: flex;
+    align-items: center;
+}
+
+.new-user-creation-button {
+    width: fit-content;
+    height: 80%;
     display: block;
+    
+    background-color: rgb(56, 56, 56);
+    border: 2px black solid;
+    border-radius: 3px;
+    margin-right: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+
+    color: white;
+    font-size: 16px;
+    font-weight: 800;
+    text-align: center;
+    line-height: 25px;
+}
+.new-user-creation-button:hover {
+    background-color: rgb(107, 107, 107);
+    scale: 1.02;
+    transition: 0.2;
+}
+
+
+.users-info-container-box {
+    display: inline-flex;
     width: 250px;
     height: 100px;
     background-color: beige;
@@ -166,10 +205,20 @@ body {
 }
 
 
+.user-container {
+    display: block;
+    width: 250px;
+    height: 100px;
+    background-color: rgb(221, 221, 54);
+}
+
+
+
 .tab-accounts {
     background-color: rgb(47, 83, 100);
-    width:100%;
-    height: 100vh;
+    width:auto;
+    height:calc(100vh - 80px);
+
     z-index: 10000000;
 }
 .tab-games {
@@ -181,10 +230,3 @@ body {
 
 
 
-
-.user-container {
-    display: block;
-    width: 250px;
-    height: 100px;
-    background-color: rgb(221, 221, 54);
-}
