--- a/SQLDatabaseProject/Html/dashboard.css
+++ b/SQLDatabaseProject/Html/dashboard.css
@@ -135,6 +135,7 @@ body {
     cursor: pointer;
 }
 
+/*---------------------------*/
 .tab-users {
     width: auto;
     height: fit-content;
@@ -151,13 +152,17 @@ body {
 
     background-color: rgba(182, 47, 47, 0.233);
 }
-
-.new-user-creation-container {
+.user-creation-buttons-container {
     width: 100%;
     height: 30px;
+    display: flex;
 
     background-color: rgb(83, 82, 79);
-    z-index: 1000000;
+
+    z-index: 1000;
+}
+
+.new-user-creation-container {
 
     padding-left: 2px;
     display: flex;
@@ -186,8 +191,42 @@ body {
     background-color: rgb(107, 107, 107);
     scale: 1.02;
     transition: 0.2;
+    cursor: pointer;
 }
 
+.new-user-creation-help-container {
+    display: flex;
+    margin-left: auto;
+    margin-right: 25px;
+
+
+    align-items: center;
+}
+.new-user-creation-help {
+    width: fit-content;
+    height: 80%;
+    display: block;
+
+    background-color: rgb(56, 56, 56);
+    border: 2px black solid;
+    border-radius: 3px;
+    margin-right: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+
+    color: white;
+    font-size: 16px;
+    font-weight: 800;
+    text-align: center;
+    line-height: 25px;
+}
+.new-user-creation-help:hover {
+    background-color: rgb(107, 107, 107);
+    scale: 1.02;
+    transition: 0.2;
+    cursor: pointer;
+}
+/*-----------------*/
 
 .users-info-container-box {
     display: inline-flex;
@@ -202,6 +241,7 @@ body {
     padding: 10px;
 
     z-index: 10000;
+    overflow: hidden;
 }
 
 
